5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1798_2563.log
== TEST (2019-06-05 14:02:05) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
i=0
n=0
while(size(vet)>=5):
	i= i+1
	for element in v:
		if(vet[i]<7 and vet[i]>=5):
			n = n+1
print(n)
			
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:08:25) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
i=0
n=0
while(size(vet)>=5):
	for element in v:
		if(vet[i]<7 and vet[i]>=5):
			n = n+1
print(n)
			
	
	
-- EXECUTION TIME:
1.05767
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 6, in <module>
    for element in v:
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:08:42) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
i=0
n=0
while(size(vet)>=5):
	for element in v:
		if(vet[i]<7 and vet[i]>=5):
			n = n+1
print(n)
			
	
	
-- EXECUTION TIME:
3.10869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 6, in <module>
    for element in v:
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:08:44) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
i=0
n=0
while(size(vet)>=5):
	for element in v:
		if(vet[i]<7 and vet[i]>=5):
			n = n+1
print(n)
			
	
	
-- EXECUTION TIME:
3.46034
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 6, in <module>
    for element in v:
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:08:44) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
i=0
n=0
while(size(vet)>=5):
	for element in v:
		if(vet[i]<7 and vet[i]>=5):
			n = n+1
print(n)
			
	
	
-- EXECUTION TIME:
4.32646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 6, in <module>
    for element in v:
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:08:44) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
i=0
n=0
while(size(vet)>=5):
	for element in v:
		if(vet[i]<7 and vet[i]>=5):
			n = n+1
print(n)
			
	
	
-- EXECUTION TIME:
5.06901
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 6, in <module>
    for element in v:
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:08:44) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
i=0
n=0
while(size(vet)>=5):
	for element in v:
		if(vet[i]<7 and vet[i]>=5):
			n = n+1
print(n)
			
	
	
-- EXECUTION TIME:
5.90168
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 6, in <module>
    for element in v:
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:09:41) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
i=0
n=0
while(size(vet)>i):
	for element in v:
		if(vet[i]<7 and vet[i]>=5):
			n = n+1
	i+=1
print(n)
			
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:09:57) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
i=0
n=0
while(size(vet)>i):
	for element in vet:
		if(vet[i]<7 and vet[i]>=5):
			n = n+1
	i+=1
print(n)
			
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:10:45) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
i=0
n=0
while(size(vet)>i):
	for element in vet:
		if(element<7 and element>=5):
			n = n+1
	i+=1
print(n)
			
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:10:59) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
i=0
n=0
while(size(vet)>i):
	for element in vet:
		if(element<7 and element>=5):
			n = n+1
	i+=1
print(n)
			
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:12:47) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))


while(size(vet)>1):
	n=0
	for element in vet:
		if(element<7 and element>=5):
			n = n+1
	
	i+=1
	vet = array(eval(input("Digite o vetor: ")))
print(n)
			
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:13:05) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))


while(size(vet)>1):
	n=0
	for element in vet:
		if(element<7 and element>=5):
			n = n+1
	vet = array(eval(input("Digite o vetor: ")))
print(n)
			
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:13:55) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))


while(size(vet)>1):
	n=0
	for element in vet:
		if(element<7 and element>=5):
			n = n+1
		print(n)
	vet = array(eval(input("Digite o vetor: ")))

			
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:14:08) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))


while(size(vet)>1):
	n=0
	for element in vet:
		if(element<7 and element>=5):
			n = n+1
	print(n)
	vet = array(eval(input("Digite o vetor: ")))

			
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:14:32) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))


while(size(vet)>1):
	n=0
	for element in vet:
		if(element<7 and element>=5):
			n = n+1
	print(n)
	vet = array(eval(input("Digite o vetor: ")))

			
	
	
-- EXECUTION TIME:
1.11035
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 22:43:47) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))


while(size(vet)>1):
	n=0
	for element in vet:
		if(element<7 and element>=5):
			n = n+1
	print(n)
	vet = array(eval(input("Digite o vetor: ")))

			
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
